--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,16 +10,16 @@ a {
 
 /* ================ Tables ================ */
 table {
-    border: 1px solid rgb(56, 56, 56);
+	border: 1px solid rgb(56, 56, 56);
 	padding: 0;
 	border-spacing:0; 
 	border-collapse: collapse;
 }
 table thead {
-    text-align: left;
-    vertical-align: bottom;
-    background: rgb(80, 80, 80);
-    color: white;
+	text-align: left;
+	vertical-align: bottom;
+	background: rgb(80, 80, 80);
+	color: white;
 }
 table tr th {
 	padding: 0.5em;
@@ -45,13 +45,19 @@ code {
 	counter-reset: line;
 	
 	padding: 1px;
-    padding-left: 3px;
-    padding-right: 3px;
+	padding-left: 3px;
+	padding-right: 3px;
+	
+	/* For code blocks, only allow horizontal scrolling 
+	   Vertical space is always correct. */
+	overflow-y: hidden;
+	overflow-x: auto;
 }
 pre code {
 	border: none;
 	background: inherit;
-	padding: auto;
+	padding: 0;
+	background: rgb(28, 28, 28);
 }
 .rouge-table {
 	background: rgb(28, 28, 28);
@@ -59,6 +65,16 @@ pre code {
 .rouge-gutter {
 	border-right: 1px solid rgb(56, 56, 56);
 }
+/* Code wrapper that contains a table */
+div pre code {
+	box-sizing: border-box;
+	display: block;
+	border: 1px solid rgb(56,56,56);
+}
+.rouge-table {
+	border: none;
+}
+
 /* ================ Layout ================ */
 #top, 
 #sidebar {
@@ -66,6 +82,8 @@ pre code {
 }
 #content {
 	border-top:  1px solid rgb(66, 66, 66);
+	border-left: 1px solid rgb(66, 66, 66);
+	background: rgb(35, 35, 35);
 }
 .menu h3 {
 	margin-bottom: -0.6em;
@@ -78,7 +96,7 @@ pre code {
 }
 .menu ul li a {
 	display: block;
-    width: 100%;
+	width: 100%;
 }
 .menu ul li::marker {
 	content: "";
